// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchLayout renders with initial state 1`] = `
<Row
  className="__SearchLayout__"
  gutter={32}
  justify="start"
  type="flex"
>
  <Col
    lg={8}
    xl={6}
    xxl={5}
  >
    <LoadingOrChildren
      loading={false}
    >
      <Connect(AggregationFilters) />
    </LoadingOrChildren>
  </Col>
  <Col
    lg={16}
    xl={15}
    xxl={14}
  >
    <LoadingOrChildren
      loading={false}
    >
      <Row
        align="middle"
        gutter={0}
        justify="end"
        type="flex"
      >
        <Col
          span={12}
        >
          <Connect(NumberOfResults) />
        </Col>
        <Col
          className="alignRight"
          span={12}
        >
          <Connect(SortBy) />
        </Col>
      </Row>
      <Row
        gutter={0}
      >
        <Col
          span={24}
        >
          <Connect(SearchResults)
            renderItem={[Function]}
          />
          <Connect(SearchPagination) />
        </Col>
      </Row>
    </LoadingOrChildren>
  </Col>
</Row>
`;

exports[`SearchLayout renders with loading states true 1`] = `
<Row
  className="__SearchLayout__"
  gutter={32}
  justify="start"
  type="flex"
>
  <Col
    lg={8}
    xl={6}
    xxl={5}
  >
    <LoadingOrChildren
      loading={false}
    >
      <Connect(AggregationFilters) />
    </LoadingOrChildren>
  </Col>
  <Col
    lg={16}
    xl={15}
    xxl={14}
  >
    <LoadingOrChildren
      loading={false}
    >
      <Row
        align="middle"
        gutter={0}
        justify="end"
        type="flex"
      >
        <Col
          span={12}
        >
          <Connect(NumberOfResults) />
        </Col>
        <Col
          className="alignRight"
          span={12}
        >
          <Connect(SortBy) />
        </Col>
      </Row>
      <Row
        gutter={0}
      >
        <Col
          span={24}
        >
          <Connect(SearchResults)
            renderItem={[Function]}
          />
          <Connect(SearchPagination) />
        </Col>
      </Row>
    </LoadingOrChildren>
  </Col>
</Row>
`;

exports[`SearchLayout renders without aggregations and sort 1`] = `
<Row
  className="__SearchLayout__"
  gutter={32}
  justify="start"
  type="flex"
>
  <Col
    lg={8}
    xl={6}
    xxl={5}
  />
  <Col
    lg={16}
    xl={15}
    xxl={14}
  >
    <LoadingOrChildren
      loading={false}
    >
      <Row
        align="middle"
        gutter={0}
        justify="end"
        type="flex"
      >
        <Col
          span={12}
        >
          <Connect(NumberOfResults) />
        </Col>
        <Col
          className="alignRight"
          span={12}
        />
      </Row>
      <Row
        gutter={0}
      >
        <Col
          span={24}
        >
          <Connect(SearchResults)
            renderItem={[Function]}
          />
          <Connect(SearchPagination) />
        </Col>
      </Row>
    </LoadingOrChildren>
  </Col>
</Row>
`;
